--- a/test_app/templates/test_app/base.html
+++ b/test_app/templates/test_app/base.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <link rel="icon" type="image/png"  href="">
-    <title>Test Project</title>
+    <title>DAR Project</title>
 </head>
 <body>
 
 
-<nav class="navbar navbar-expand-md navbar-light bg-warning">
+<nav class="navbar navbar-expand-md navbar-light bg-success">
 <div class="container">
     <a class="navbar-brand" href="{% url 'login_user' %}">
-        <span>Test Project</span>
+        <span class="text-white">DAR Project</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -26,14 +26,14 @@
         {% if user.is_authenticated %}
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <span class="nav-link">Hello, {{ request.user }}</span>
+                    <span class="nav-link text-white">Hello, {{ request.user }}</span>
                 </li>
             </ul>
         {% endif %}
     <ul class="navbar-nav ml-auto">
         {% if user.is_authenticated %}
             <li class="nav-item">
-                <a href="#" onclick="$('#signOutBtn').click()" class="nav-link">Logout</a>
+                <a href="#" onclick="$('#signOutBtn').click()" class="nav-link text-white">Logout</a>
                 <form style='display: none;' method="POST" action="{% url 'logout_user' %}">
                     {% csrf_token %}
                     <button id="signOutBtn" type="submit">Logout</button>
@@ -41,10 +41,10 @@
             </li>
         {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'register_user' %}">Sign Up</a>
+                <a class="nav-link text-white" href="{% url 'register_user' %}">Sign Up</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'login_user' %}">Login</a>
+                <a class="nav-link text-white" href="{% url 'login_user' %}">Login</a>
             </li>
         {% endif %}
     </ul>
