--- a/test_app/templates/test_app/dataentry.html
+++ b/test_app/templates/test_app/dataentry.html
@@ -4,7 +4,7 @@
 
 <div class="row justify-content-center mt-5">
     <div class="col-md-10">
-        <h1>Data Entry</h1><span>Please fill out all fields</span>
+        <h1>Personal Information</h1><span>Please fill out all fields</span>
     </div>
 </div>
 
@@ -15,7 +15,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <br>
-            <button type="submit" class="btn btn-warning">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </div>
