create new area entry module

--- a/test_app/templates/test_app/dashboard.html
+++ b/test_app/templates/test_app/dashboard.html
@@ -64,6 +64,11 @@
         data: data,
         options: {}
     };
+
+    const myChart = new Chart(
+        document.getElementById('myChart'),
+        config
+    );
 </script>
 
 {% endblock %}
