added search feature

--- a/test_app/templates/test_app/addentry.html
+++ b/test_app/templates/test_app/addentry.html
@@ -10,7 +10,7 @@
             {% csrf_token %}
             <div class="row">
                 <div class="col-sm-12 col-md-6">
-                    <label class="h6" for="id_total_area">Total Area: </label><br>
+                    <label class="h6" for="id_total_area">Area Applied: </label><br>
                     {{ form.total_area }}<br>
                     <label class="h6" for="id_crop_planted">Crop Planted: </label><br>
                     {{ form.crop_planted }}<br>
