--- a/test_app/templates/test_app/user_home.html
+++ b/test_app/templates/test_app/user_home.html
@@ -19,7 +19,7 @@
             <thead class="table-success">
                 <tr>
                     <th scope="col">ID</th>
-                    <th scope="col">Total Area</th>
+                    <th scope="col">Area Applied</th>
                     <th scope="col">Crop Planted</th>
                     <th scope="col">Remarks</th>
                     <th scope="col" align="center">Actions</th>
