--- a/test_app/templates/test_app/viewarea.html
+++ b/test_app/templates/test_app/viewarea.html
@@ -14,7 +14,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
-                        <p class="card-text">Total Area: <strong>{{ user_area.total_area }}</strong></p>
+                        <p class="card-text">Area Applied: <strong>{{ user_area.total_area }}</strong></p>
                         <p class="card-text">Crop Planted: <strong>{{ user_area.crop_planted }}</strong></p>
                         <p class="card-text">Remarks: <strong>{{ user_area.remarks }}</strong></p>
                     </div>
