--- a/test_app/templates/test_app/dashboard.html
+++ b/test_app/templates/test_app/dashboard.html
@@ -26,6 +26,7 @@
 <div class="row justify-content-center mt-5">
     <div class="col-md-10">
         <h1>Dashboard</h1>
+        {% include 'test_app/messages.html' %}
         <br>
         <div class="row">
             <div class="col-sm-12 col-lg-12">
