--- a/test_app/templates/test_app/users.html
+++ b/test_app/templates/test_app/users.html
@@ -1,12 +1,33 @@
 {% extends 'test_app/base.html' %}
 
+{% block css %}
+<style>
+    #spinner-div {
+        position: fixed;
+        display: none;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        text-align: center;
+        background-color: rgba(255, 255, 255, 0.8);
+        z-index: 2;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
+<div id="spinner-div" class="pt-5">
+    <div class="spinner-border text-primary" role="status"></div>
+</div>
 
 <div class="row justify-content-center mt-5">
     <div class="col-md-10">
         <h1>System Users</h1>
         <hr>
-        <a type="button" class="btn btn-primary" href="#">Add New User</a>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addNewUserModal" data-backdrop="static" data-keyboard="false">
+            Add New User
+        </button>
         <br>
         <br>
         <table class="table table-hover table-stripped table-responsive-md" id="profile_list">
@@ -28,12 +49,126 @@
                         <td>{{ data.last_name }}</td>
                         <td>{{ data.gender }}</td>
                         <td>{{ data.address }}</td>
-                        <td><a type="button" class="btn btn-outline-primary btn-sm text-primary" href="#">Update</a>
+                        <td>
+                            <a type="button" class="btn btn-outline-primary btn-sm text-primary" href="#">View</a>
+                            <a type="button" class="btn btn-outline-info btn-sm text-info" href="#">Reset</a>
+                            <a type="button" class="btn btn-outline-danger btn-sm text-danger" href="#">Deactivate</a>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
 </div>
+
+<form action="" method="POST">
+    {% csrf_token %}
+    <div class="modal fade bd-example-modal-lg" id="addNewUserModal" tabindex="-1" role="dialog" aria-labelledby="addNewUserModalTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addUserModalLongTitle">Update Area</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    {{ form.as_p }}
+                    Region:
+                    <select class="form-select form-control" name="region" id="region" onchange="populateProvince(this)" aria-label="Select Region">
+                        <option value="0" selected>Select a Region</option>
+                        {% for region in regions %}
+                            <option value="{{ region.reg_code }}">{{ region.region_name }}</option>
+                        {% endfor %}
+                    </select><br>
+                    Province:
+                    <select class="form-select form-control" name="province" id="province" onchange="populateMunCity(this)" aria-label="Select Province">
+                        <option value="0" selected>Select Province</option>
+                    </select><br>
+                    City/Municipality:
+                    <select class="form-select form-control" name="muncity" id="muncity" onchange="populateBrgy(this)" aria-label="Select City/Municipality">
+                        <option value="0" selected>Select City/Municipality</option>
+                    </select><br>
+                    Barangay:
+                    <select class="form-select form-control" name="brgy" id="brgy" aria-label="Select Barangay">
+                        <option value="0" selected>Select Barangay</option>
+                    </select>
+                    <hr>
+                    {{ userform.as_p }}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-success">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
+
+{% endblock %}
+
+{% block chart_js %}
+
+<script>
+    function populateProvince(region){
+        var url = "{% url 'province_filtered' 0 %}";
+        $('#province').empty();
+        $('#spinner-div').show();
+        $.ajax({
+            type: "GET",
+            url: url.replace('0', region.value),
+            success: function(opts){
+                $('#province').append("<option value='0'>Select Province</option>");
+                for (var key in opts.provinces){
+                    var temp = "<option value='" + opts.provinces[key].prov_code + "'>" + opts.provinces[key].province_name + "</option>";
+                    $('#province').append(temp);
+                }
+            },
+            complete: function () {
+                $('#spinner-div').hide();
+            }
+        });
+    }
+
+    function populateMunCity(province){
+        var url = "{% url 'muncity_filtered' 0 %}";
+        $('#muncity').empty();
+        $('#spinner-div').show();
+        $.ajax({
+            type: "GET",
+            url: url.replace('0', province.value),
+            success: function(opts){
+                $('#muncity').append("<option value='0'>Select City/Municipality</option>");
+                for (var key in opts.muncities){
+                    var temp = "<option value='" + opts.muncities[key].muncity_code + "'>" + opts.muncities[key].muncity_name + "</option>";
+                    $('#muncity').append(temp);
+                }
+            },
+            complete: function () {
+                $('#spinner-div').hide();
+            }
+        });
+    }
+
+    function populateBrgy(muncity){
+        var url = "{% url 'brgy_filtered' 0 %}";
+        $('#brgy').empty();
+        $('#spinner-div').show();
+        $.ajax({
+            type: "GET",
+            url: url.replace('0', muncity.value),
+            success: function(opts){
+                $('#brgy').append("<option value='0'>Select Barangay</option>");
+                for (var key in opts.brgys){
+                    var temp = "<option value='" + opts.brgys[key].brgy_psgc_code + "'>" + opts.brgys[key].brgy_name + "</option>";
+                    $('#brgy').append(temp);
+                }
+            },
+            complete: function () {
+                $('#spinner-div').hide();
+            }
+        });
+    }
+</script>
 
 {% endblock %}
