--- a/test_app/templates/test_app/viewarea.html
+++ b/test_app/templates/test_app/viewarea.html
@@ -24,7 +24,11 @@
                     </div>
                 </div>
                 <br>
-                <a href="{% url 'user_home' %}" class="btn btn-warning">Back</a>
+                {% if user.is_superuser %}
+                    <a href="{% url 'user_dashboard' %}" class="btn btn-warning">Back</a>
+                {% else %}
+                    <a href="{% url 'user_home' %}" class="btn btn-warning">Back</a>
+                {% endif %}
                 <button type="button" class="btn btn-success" data-toggle="modal" data-target="#updateAreaModal" data-backdrop="static" data-keyboard="false">
                     Update Area
                 </button>
