--- a/test_app/templates/test_app/newfarmer.html
+++ b/test_app/templates/test_app/newfarmer.html
@@ -56,7 +56,7 @@
             {{ form_attachments.as_p }}
             <hr>
             <div class="d-flex justify-content-between">
-                <a type="button" href="#" class="btn btn-warning">Cancel</a>
+                <a type="button" href="{% url 'user_info' %}" class="btn btn-warning">Cancel</a>
                 <button type="submit" class="btn btn-success">Submit</button>
             </div>
         </form>
