--- a/test_app/templates/test_app/staffdashboard.html
+++ b/test_app/templates/test_app/staffdashboard.html
@@ -41,7 +41,7 @@
                         <td>{{ data.last_name }}</td>
                         <td>{{ data.gender }}</td>
                         <td>{{ data.address }}</td>
-                        <td><a type="button" class="btn btn-outline-primary btn-sm text-primary" href="#">View</a>
+                        <td><a type="button" class="btn btn-outline-primary btn-sm text-primary" href="{% url 'view_farmer' data.id %}">View</a>
                     </tr>
                 {% endfor %}
             </tbody>
