furnish uploading of files and started user groups

--- a/test_app/templates/test_app/addentry.html
+++ b/test_app/templates/test_app/addentry.html
@@ -67,8 +67,8 @@
                             Upload files
                         </h5>
                         <div class="card-body">
-                            <label class="h6" for="id_sketch_plan">Sketch Plan: </label><br>
-                            {{ form.sketch_plan }}<br><br>
+<!--                            <label class="h6" for="id_sketch_plan">Sketch Plan: </label><br>-->
+<!--                            {{ form.sketch_plan }}<br><br>-->
 <!--                            <div class="input-group mb-3">-->
 <!--                                <div class="input-group-prepend">-->
 <!--                                    <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>-->
@@ -78,11 +78,13 @@
 <!--                                    <label class="h6 custom-file-label" for="id_sketch_plan">Sketch Plan</label>-->
 <!--                                </div>-->
 <!--                            </div>-->
-                            <label class="h6" for="id_map">Map: </label><br>
-                            {{ form.map }}<br><br>
+<!--                            <label class="h6" for="id_map">Map: </label><br>-->
+<!--                            {{ form.map }}<br><br>-->
 
-                            <label class="h6" for="id_google_earth">Google Earth: </label><br>
-                            {{ form.google_earth }}<br><br>
+<!--                            <label class="h6" for="id_google_earth">Google Earth: </label><br>-->
+<!--                            {{ form.google_earth }}<br><br>-->
+                                <label class="h6" for="id_map">Area Coordinates: </label><br>
+                                {{ form.area_coordinates }}<br><br>
                         </div>
                     </div>
                     <br>
