--- a/test_app/templates/test_app/engineerviewarea.html
+++ b/test_app/templates/test_app/engineerviewarea.html
@@ -4,7 +4,7 @@
 
 <div class="row justify-content-center mt-5">
     <div class="col-md-10">
-        <h1>Entry Details - <em>Entry ID. {{ user_area.id }}</em></h1>
+        <h1>Farm Details - <em>{{ user_area.farmer_id.first_name }}</em></h1>
         {% include 'test_app/messages.html' %}
         <br>
         <div class="card shadow border-success">
@@ -25,38 +25,32 @@
                     </div>
                 </div>
                 <br>
-                {% if user.is_superuser %}
-                    <a href="{% url 'user_dashboard' %}" class="btn btn-warning">Back</a>
-                {% else %}
-                    <a href="{% url 'user_info' %}" class="btn btn-warning">Back</a>
-                {% endif %}
+                <a href="{% url 'user_engineer' %}" class="btn btn-warning">Back</a>
                 <button type="button" class="btn btn-success" data-toggle="modal" data-target="#updateAreaModal" data-backdrop="static" data-keyboard="false">
                     Update Area
                 </button>
             </div>
         </div>
         <br><br><h4>Attachments</h4><hr>
-        {% if user.groups.all.0.id == 2 or user.is_superuser %}
-            <label class="h6">Sketch Plan: </label>
-            {% if user_area.sketch_plan %}
-                <a class="h6 btn-outline-success" href="/media/{{ user_area.sketch_plan }}" target="_blank">Click here to view or download</a><br>
-            {% else %}
-                <a class="h6 btn-outline-danger" href="#">No attached file</a><br>
-            {% endif %}
+        <label class="h6">Sketch Plan: </label>
+        {% if user_area.sketch_plan %}
+            <a class="h6 btn-outline-success" href="/media/{{ user_area.sketch_plan }}" target="_blank">Click here to view or download</a><br>
+        {% else %}
+            <a class="h6 btn-outline-danger" href="#">No attached file</a><br>
+        {% endif %}
 
-            <label class="h6">Map: </label>
-            {% if user_area.map %}
-                <a class="h6 btn-outline-success" href="/media/{{ user_area.map }}" target="_blank">Click here to view or download</a><br>
-            {% else %}
-                <a class="h6 btn-outline-danger" href="#">No attached file</a><br>
-            {% endif %}
+        <label class="h6">Map: </label>
+        {% if user_area.map %}
+            <a class="h6 btn-outline-success" href="/media/{{ user_area.map }}" target="_blank">Click here to view or download</a><br>
+        {% else %}
+            <a class="h6 btn-outline-danger" href="#">No attached file</a><br>
+        {% endif %}
 
-            <label class="h6">Google Earth: </label>
-            {% if user_area.google_earth %}
-                <a class="h6 btn-outline-success" href="/media/{{ user_area.google_earth }}" target="_blank">Click here to view or download</a><br>
-            {% else %}
-                <a class="h6 btn-outline-danger" href="#">No attached file</a><br>
-            {% endif %}
+        <label class="h6">Google Earth: </label>
+        {% if user_area.google_earth %}
+            <a class="h6 btn-outline-success" href="/media/{{ user_area.google_earth }}" target="_blank">Click here to view or download</a><br>
+        {% else %}
+            <a class="h6 btn-outline-danger" href="#">No attached file</a><br>
         {% endif %}
 
         <label class="h6">Area Coordinates: </label>
